packages/typ/tests/fixtures/diagnostics/0204_adt_nested_annotation_mismatch_07.ml.expected
File "0204_adt_nested_annotation_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0204_adt_nested_annotation_mismatch_07 is not a valid module name.

File "0204_adt_nested_annotation_mismatch_07.ml", line 2, characters 29-33:
2 | let _ : rec_eta = { index = (true, 6); seen = true }
                                 ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
